view UI for forgotpassword steps made better

--- a/CinemaTicketingSystem.Web/Views/Account/ResetPassword.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Account/ResetPassword.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Reset Password";
 }
 
-<div class="container d-flex justify-content-center align-items-center min-vh-100">
+<div class="container d-flex justify-content-center align-items-center" style="min-height: 50vh;">
     <div class="card shadow-lg rounded-4 p-4" style="max-width: 450px; width: 100%;">
         <div class="card-body">
             <h3 class="text-center text-primary fw-bold">🔒 Reset Your Password</h3>
