--- a/CinemaTicketingSystem.Web/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Account/ResetPasswordConfirmation.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Password Reset Successful";
 }
 
-<div class="container d-flex justify-content-center align-items-center min-vh-100">
+<div class="container d-flex justify-content-center align-items-center" style="min-height: 50vh;">
     <div class="card shadow-lg rounded-4 p-4 text-center" style="max-width: 450px; width: 100%;">
         <div class="card-body">
             <h3 class="text-success fw-bold">✅ Password Reset Successful</h3>
