--- a/CinemaTicketingSystem.Web/Views/Shared/_Layout.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -32,9 +34,12 @@
                             <a class="nav-link" asp-controller="Theatre" asp-action="AllTheatres">Theatres</a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="Admin" asp-action="Index">🛠️ Admin Panel</a>
-                        </li>
+                        @if (User.Identity.IsAuthenticated && User.IsInRole(SD.Role_Admin))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Admin" asp-action="Index">🛠️ Admin Panel</a>
+                            </li>
+                        }
 
                         @if (User.Identity.IsAuthenticated)
                         {
