--- a/CinemaTicketingSystem.Web/Views/_ViewImports.cshtml
+++ b/CinemaTicketingSystem.Web/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using CinemaTicketingSystem.Web.Models
 @using CinemaTicketingSystem.Web.ViewModels
 @using CinemaTicketingSystem.Domain.Entities
+@using CinemaTicketingSystem.Application.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
