AccessDenied Page created - Authorization added for MovieController methods

--- a/CinemaTicketingSystem.Web/Views/Shared/_AdminLayout.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Shared/_AdminLayout.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = null;
     ViewData["Title"] = "Admin Dashboard";
-    var userName = ViewData["UserName"] ?? "Guest";
+    var userName = User.Identity.Name ?? "Guest";
 }
 
 <!DOCTYPE html>
