--- a/CinemaTicketingSystem.Web/Views/Shared/_Layout.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Shared/_Layout.cshtml
@@ -98,7 +98,10 @@
             <div class="row align-items-center">
                 <!-- Copyright / Social -->
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    <p class="mb-0">&copy; 2024 Cinema Ticket System. All Rights Reserved.</p>
+                    <p class="mb-0">&copy; 2025 Cinema Ticket System. All Rights Reserved.</p>
+                    <p style="font-size: 14px; color: #888">
+                        Developed with ❤️ by <a href="https://MaxIt.dev" target="_blank" style="text-decoration: none; color: inherit; font-weight: bold;">MaxIt.dev</a>
+                    </p>
                 </div>
                 <!-- Navigation Links -->
                 <div class="col-md-6 text-center text-md-end">
