--- a/CinemaTicketingSystem.Web/Views/Account/Register.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Account/Register.cshtml
@@ -23,6 +23,7 @@
                 @model RegisterUserVM
 
                 <form asp-action="Register" method="post">
+                    <input hidden asp-for="RedirectUrl" />
                     <div class="row">
                         <!-- First Name -->
                         <div class="col-md-6 mb-3">
