--- a/CinemaTicketingSystem.Web/Views/Shared/_AdminLayout.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Shared/_AdminLayout.cshtml
@@ -16,6 +16,7 @@
     <link href="~/lib/bootstrap/dist/css/bootstrap.rtl.min.css" rel="stylesheet" />
     <link href="~/lib/bootstrap/dist/css/bootstrap.rtl.css" rel="stylesheet" />
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="~/favicon.png" />
 </head>
 <body>
     <div class="d-flex" id="wrapper">
