--- a/CinemaTicketingSystem.Web/Views/Shared/_Layout.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/cinema.css" asp-append-version="true" />
+    <link rel="icon" type="image/png" href="~/favicon.png" />
 </head>
 <body>
 
