--- a/CinemaTicketingSystem.Web/wwwroot/css/site.css
+++ b/CinemaTicketingSystem.Web/wwwroot/css/site.css
@@ -29,3 +29,13 @@ body {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
   text-align: start;
 }
+
+
+/* Ensure the navbar toggler icon is visible on dark backgrounds */
+.navbar-toggler {
+    border: none; /* Remove the default border */
+}
+
+.navbar-toggler-icon {
+    filter: invert(1); /* Change the dark icon to white */
+}
